--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,9 @@
             margin-left: 57px;
             margin-bottom: 30px;
         }
+        .buttonSet{
+            padding: 151px;
+        }
     </style>
 </head>
 <body>
@@ -67,5 +70,6 @@
         
         <input class="submitButton" type="submit" value="Gửi">
     </form>
+    <a class="buttonSet" href="/setime">Đi đến trang setup thời gian</a>
 </body>
 </html>
